name:                hask-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aaronscode/hask-server#readme
license:             BSD3
license-file:        LICENSE
author:              Aaron Gross
maintainer:          agross@temple.edu
copyright:           2017 Aaron Gross
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hask-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       network
